# grpc_study

./: .gitignore
private_spooling_L&W/: dtc_tester.grpc.pb.cc  dtc_tester.grpc.pb.h  dtc_tester.pb.cc  dtc_tester.pb.h
private_spooling_L&W/grpc/: Makefile  cmake_install.cmake  gRPCConfigVersion.cmake
private_spooling_L&W/grpc/libs/opt/pkgconfig/: grpc++.pc  grpc++_unsecure.pc
proj0/: CMakeLists.txt  ex_client.cc  ex_server.cc
proj0/proto/: ex.proto
proj1/: CMakeLists.txt
proj1/bar/: CMakeLists.txt
proj1/foo/: CMakeLists.txt
